src/objects/Booking_Bug_Mapping__mdt.object
<CustomObject>
    <description>Type used to store object record mapping between the BookingBug Data object and Standard or Custom objects.</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>API Name for the Salesforce Object.
Example: Custom_Object__c</description>
        <inlineHelpText>API Name for the Salesforce Object.
Example: Custom_Object__c</inlineHelpText>
        <label>API Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIeld_Map_Definition__c</fullName>
        <description>You can define field level mapping in a simple JSON format. 
Convention used: &quot;{&quot;BBData_field&quot;:&quot;Standard_Field&quot;}&quot;</description>
        <inlineHelpText>You can define field level mapping in a simple JSON format. 
Convention used: &quot;{&quot;BBData_field&quot;:&quot;Standard_Field&quot;}&quot;</inlineHelpText>
        <label>FIeld Map Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field that indicates if the current mapping is active or not.</description>
        <inlineHelpText>Field that indicates if the current mapping is active or not.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Booking Bug type of entity.</description>
        <inlineHelpText>Type of entity. 
Example: Contact could be of Client type, Event could be Booking, User should be Login and so on.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Booking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Login</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Field__c</fullName>
        <description>Field to enforce uniqueness of records in order to prevent duplicates. Example: email or phone number.</description>
        <inlineHelpText>Field to enforce uniqueness of records in order to prevent duplicates. Example: email or phone number.</inlineHelpText>
        <label>Unique Field</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only update existing records based on the Unique Field value and do not create new ones.  
Warning: New records will get lost!</inlineHelpText>
        <label>Update Only</label>
        <type>Checkbox</type>
    </fields>
    <label>Booking Bug Mapping</label>
    <pluralLabel>Booking Bug Mapping</pluralLabel>
</CustomObject>